--- a/languages/cms-tree-page-view-sr_RS.po
+++ b/languages/cms-tree-page-view-sr_RS.po
@@ -8,265 +8,260 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/cms-tree-page-view\n"
 "POT-Creation-Date: 2013-04-16 16:52+0100\n"
-"PO-Revision-Date: 2013-04-16 17:00+0100\n"
+"PO-Revision-Date: 2013-07-30 11:44+0100\n"
 "Last-Translator: Martin Lettner <m.lettner@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.5\n"
+"X-Generator: Poedit 1.5.7\n"
 
 #: ../cms-tree-page-view/functions.php:66
 #: ../cms-tree-page-view/functions.php:113
 #: ../cms-tree-page-view/functions.php:1396
 msgid "Cheatin&#8217; uh?"
-msgstr ""
+msgstr "Cheatin&#8217; uh?"
 
 #: ../cms-tree-page-view/functions.php:321
 msgid "Enter title of new page"
-msgstr "Titel der neuen Seite eingeben"
+msgstr "Unesite naslov nove stranice"
 
 #: ../cms-tree-page-view/functions.php:322
 msgid "child pages"
-msgstr "untergeordnete Seiten"
+msgstr "stranice za decu"
 
 #: ../cms-tree-page-view/functions.php:323
 #: ../cms-tree-page-view/functions.php:970
 msgid "Edit page"
-msgstr "Seite bearbeiten"
+msgstr "Editujte stranicu"
 
 #: ../cms-tree-page-view/functions.php:324
 #: ../cms-tree-page-view/functions.php:971
 msgid "View page"
-msgstr "Seite anzeigen"
+msgstr "Pregledajte stranicu"
 
 #: ../cms-tree-page-view/functions.php:325
 #: ../cms-tree-page-view/functions.php:970
 msgid "Edit"
-msgstr "Bearbeiten"
+msgstr "Editovanje "
 
 #: ../cms-tree-page-view/functions.php:326
 #: ../cms-tree-page-view/functions.php:971
 msgid "View"
-msgstr "Anzeigen"
+msgstr "Pregled"
 
 #: ../cms-tree-page-view/functions.php:327
 msgid "Add page"
-msgstr "Seite hinzufügen"
+msgstr "Dodajte stranicu"
 
 #: ../cms-tree-page-view/functions.php:328
 #: ../cms-tree-page-view/functions.php:979
 msgid "Add new page after"
-msgstr "Eine neue Seite nach dieser hinzufügen"
+msgstr "Dodajte novu stranicu nakon"
 
 #: ../cms-tree-page-view/functions.php:329
 msgid "after"
-msgstr "Danach"
+msgstr "nakon"
 
 #: ../cms-tree-page-view/functions.php:330
 msgid "inside"
-msgstr "Innerhalb"
+msgstr "unutar"
 
 #: ../cms-tree-page-view/functions.php:331
 msgid "Sorry, can't create a sub page to a page with status \"draft\"."
 msgstr ""
-"Entschuldigung, es kann keine Unterseite zu einer Seite mit dem Status "
-"\"Entwurf\" hinzugefügt werden."
+"Izvinite, ne možemo kreirati podstranicu za stranicu bez statusa \"draft\"."
 
 #: ../cms-tree-page-view/functions.php:332
 msgid "Sorry, can't create a sub page to a page with status \"trash\"."
 msgstr ""
-"Entschuldigung, es kann keine Unterseite zu einer Seite mit dem Status "
-"\"Papierkorb\" hinzugefügt werden."
+"Izvinite, ne možemo kreirati podstranicu za stranicu bez statusa \"trash\"."
 
 #: ../cms-tree-page-view/functions.php:333
 msgid "Sorry, can't create a page after a page with status \"trash\"."
 msgstr ""
-"Entschuldigung, es kann keine Seite nach einer Seite mit dem Status "
-"\"Papierkorb\" hinzugefügt werden."
+"Izvinite, ne možemo kreirati stranicu nakon stranice bez statusa \"trash\"."
 
 #: ../cms-tree-page-view/functions.php:334
 #: ../cms-tree-page-view/functions.php:984
 msgid "Add new page inside"
-msgstr "Eine neue Seite innerhalb dieser hinzufügen"
+msgstr "Dodajte novu stranicu unutar"
 
 #: ../cms-tree-page-view/functions.php:335
 #: ../cms-tree-page-view/functions.php:341
 msgid "draft"
-msgstr "Entwurf"
+msgstr "nacrt"
 
 #: ../cms-tree-page-view/functions.php:336
 #: ../cms-tree-page-view/functions.php:342
 msgid "future"
-msgstr "Geplant"
+msgstr "budući"
 
 #: ../cms-tree-page-view/functions.php:337
 #: ../cms-tree-page-view/functions.php:343
 msgid "protected"
-msgstr "Geschützt"
+msgstr "zaštićeni"
 
 #: ../cms-tree-page-view/functions.php:338
 #: ../cms-tree-page-view/functions.php:344
 #: ../cms-tree-page-view/functions.php:1296
 msgid "pending"
-msgstr "Offen"
+msgstr "na čekanju"
 
 #: ../cms-tree-page-view/functions.php:339
 #: ../cms-tree-page-view/functions.php:345
 msgid "private"
-msgstr "Privat"
+msgstr "privatno"
 
 #: ../cms-tree-page-view/functions.php:340
 #: ../cms-tree-page-view/functions.php:346
 msgid "trash"
-msgstr "In den Papierkorb verschieben"
+msgstr "smeće"
 
 #: ../cms-tree-page-view/functions.php:347
 msgid "Password protected page"
-msgstr "Passwortgeschützte Seite"
+msgstr "Stranica zaštićena lozinkom"
 
 #: ../cms-tree-page-view/functions.php:348
 msgid "Adding page..."
-msgstr "Seite wird hinzugefügt..."
+msgstr "Dodavanje stranice..."
 
 #: ../cms-tree-page-view/functions.php:349
 msgid "Adding ..."
-msgstr "Seite wird hinzugefügt…"
+msgstr "Dodavanje..."
 
 #: ../cms-tree-page-view/functions.php:350
 #: ../cms-tree-page-view/functions.php:1057
 msgid "No posts found."
-msgstr "Keine Artikel gefunden."
+msgstr "Nema pronađenih poruka"
 
 #: ../cms-tree-page-view/functions.php:448
 msgid "Tree View"
-msgstr "Baumstruktur"
+msgstr "Pregled stabla"
 
 #: ../cms-tree-page-view/functions.php:457
 msgid "List View"
-msgstr "Listenansicht"
+msgstr "Pregled liste"
 
 #: ../cms-tree-page-view/functions.php:493
 msgid "Settings"
-msgstr "Einstellungen"
+msgstr "Podešavanja"
 
 #: ../cms-tree-page-view/functions.php:533
 #, php-format
 msgctxt "name of dashboard"
 msgid "%1$s Tree"
-msgstr "%1$s Baumstruktur"
+msgstr "%1$s Stablo"
 
 #: ../cms-tree-page-view/functions.php:571
 msgctxt "name in menu"
 msgid "Tree View"
-msgstr "Baumstruktur"
+msgstr "Pregled stabla"
 
 #: ../cms-tree-page-view/functions.php:572
 #, php-format
 msgctxt "title on page with tree"
 msgid "%1$s Tree View"
-msgstr "%1$s Baumstruktur"
+msgstr "%1$s Pregled stabla"
 
 #: ../cms-tree-page-view/functions.php:592
 msgid "settings"
-msgstr "Einstellungen"
+msgstr "podešavanja"
 
 #: ../cms-tree-page-view/functions.php:598
 msgid "Select where to show a tree for pages and custom post types"
 msgstr ""
-"Auswählen wo eine Baumansicht für Seiten und Artikel angezeigt werden soll:"
+"Izaberite gde će se prikazati stablo za stranice i prilagođene tipove poruka"
 
 #: ../cms-tree-page-view/functions.php:642
 msgid "On dashboard"
-msgstr "Im Dashboard"
+msgstr "Na kontrolnoj tabli"
 
 #: ../cms-tree-page-view/functions.php:646
 msgid "In menu"
-msgstr "Im Menü"
+msgstr "U meniju"
 
 #: ../cms-tree-page-view/functions.php:650
 msgid "On post overview screen"
-msgstr "In der Beitrags-Übersicht"
+msgstr "Na ekranu za pregled stranica"
 
 #: ../cms-tree-page-view/functions.php:669
 msgid "Save Changes"
-msgstr "Änderungen speichern"
+msgstr "Sačuvajte Podešavanja"
 
 #: ../cms-tree-page-view/functions.php:913
 msgid "All"
-msgstr "Alle"
+msgstr "Sve"
 
 #: ../cms-tree-page-view/functions.php:918
 msgid "Public"
-msgstr "Öffentlich"
+msgstr "Javno"
 
 #: ../cms-tree-page-view/functions.php:923
 msgid "Trash"
-msgstr "Papierkorb"
+msgstr "Smeće"
 
 #: ../cms-tree-page-view/functions.php:931
 msgid "Expand"
-msgstr "Ausklappen"
+msgstr "Proširite"
 
 #: ../cms-tree-page-view/functions.php:932
 msgid "Collapse"
-msgstr "Einklappen"
+msgstr "Slom"
 
 #: ../cms-tree-page-view/functions.php:940
 msgid "Clear search"
-msgstr "Suche leeren"
+msgstr "Očistite pretragu"
 
 #: ../cms-tree-page-view/functions.php:941
 msgid "Search"
-msgstr "Suchen"
+msgstr "Pretraga"
 
 #: ../cms-tree-page-view/functions.php:942
 msgid "Searching..."
-msgstr "Wird gesucht..."
+msgstr "Pretraživanje..."
 
 #: ../cms-tree-page-view/functions.php:943
 msgid "Nothing found."
-msgstr "Keine Inhalte gefunden."
+msgstr "Nema pronađenih"
 
 #: ../cms-tree-page-view/functions.php:950
 msgid "Loading..."
-msgstr "Laden..."
+msgstr "Učitavanje..."
 
 #: ../cms-tree-page-view/functions.php:955
 msgid "Search: no pages found"
-msgstr "Suche: Keine Seiten gefunden"
+msgstr "Pretraga:nema pronađenih stranica"
 
 #: ../cms-tree-page-view/functions.php:958
 msgid "Loading tree"
-msgstr "Baum wird geladen"
+msgstr "Učitavanje stabla"
 
 #: ../cms-tree-page-view/functions.php:979
 #: ../cms-tree-page-view/functions.php:1016
 msgid "After"
-msgstr "Danach"
+msgstr "Nakon"
 
 #: ../cms-tree-page-view/functions.php:984
 #: ../cms-tree-page-view/functions.php:1017
 msgid "Inside"
-msgstr "Innerhalb"
+msgstr "Unutar"
 
 #: ../cms-tree-page-view/functions.php:988
 msgid "Can not create page inside of a page with draft status"
-msgstr ""
-"Es kann keine Seite innerhalb einer Seite mit Entwurfs-Status erstellt "
-"werden."
+msgstr "Ne može se napraviti stranica unutar stranice sa statusom draft"
 
 #: ../cms-tree-page-view/functions.php:1005
 msgid "Add page(s)"
-msgstr "Seite(n) hinzufügen"
+msgstr "Dodajte stranicu(s)"
 
 #: ../cms-tree-page-view/functions.php:1010
 msgid "Enter title here"
-msgstr "Titel der neuen Seite eingeben"
+msgstr "Ovde unesite naslov"
 
 #: ../cms-tree-page-view/functions.php:1015
 msgid "Position"
-msgstr "Position"
+msgstr "Pozicija"
 
 #: ../cms-tree-page-view/functions.php:1022
 msgid "Status"
@@ -274,58 +269,58 @@ msgstr "Status"
 
 #: ../cms-tree-page-view/functions.php:1023
 msgid "Draft"
-msgstr "Entwurf"
+msgstr "Draft"
 
 #: ../cms-tree-page-view/functions.php:1024
 msgid "Published"
-msgstr "Veröffentlicht"
+msgstr "Objavljeno"
 
 #: ../cms-tree-page-view/functions.php:1028
 msgid "Add"
-msgstr "Hinzufügen"
+msgstr "Dodajte"
 
 #: ../cms-tree-page-view/functions.php:1029
 msgid "or"
-msgstr "oder"
+msgstr "ili"
 
 #: ../cms-tree-page-view/functions.php:1030
 msgid "cancel"
-msgstr "Abbrechen"
+msgstr "otkažite"
 
 #: ../cms-tree-page-view/functions.php:1040
 msgid "Last modified"
-msgstr "Zuletzt modifiziert"
+msgstr "Poslednje modifikovano"
 
 #: ../cms-tree-page-view/functions.php:1042
 msgid "by"
-msgstr "von"
+msgstr "uz"
 
 #: ../cms-tree-page-view/functions.php:1045
 msgid "Page ID"
-msgstr "Seiten-ID"
+msgstr "ID stranice"
 
 #: ../cms-tree-page-view/functions.php:1088
 #, php-format
 msgctxt "headline of page with tree"
 msgid "%1$s Tree View"
-msgstr "%1$s Baumstruktur"
+msgstr "%1$s Pregled stabla"
 
 #: ../cms-tree-page-view/functions.php:1248
 msgid "Unknown user"
-msgstr "Unbekannter Benutzer"
+msgstr "Nepoznat korisnik"
 
 #: ../cms-tree-page-view/functions.php:1253
 msgid "<Untitled page>"
-msgstr "<Unbenannte Seite>"
+msgstr "<Untitled page>"
 
 #: ../cms-tree-page-view/functions.php:1286
 msgid "Comments"
-msgstr "Kommentare"
+msgstr "Komentari"
 
 #: ../cms-tree-page-view/functions.php:1293
 #, php-format
 msgid "%s pending"
-msgstr "%s offen"
+msgstr "%s na čekanju"
 
 #: ../cms-tree-page-view/functions.php:1303
 msgctxt "comment count"
@@ -344,29 +339,31 @@ msgstr "%"
 
 #: ../cms-tree-page-view/functions.php:1502
 msgid "New page"
-msgstr "Neue Seite"
+msgstr "Nova stranica"
 
 #: ../cms-tree-page-view/functions.php:1692
 msgid "Thanks for using my plugin"
-msgstr "Danke, dass Sie dieses Plugin verwenden"
+msgstr "Hvala što koristite moj dodatni program"
 
 #: ../cms-tree-page-view/functions.php:1694
 msgid ""
 "Hi there! I just wanna says thanks for using my plugin. I hope you like it "
 "as much as I do."
 msgstr ""
+"Zdravo! Samo želim da se zahvalim što koristite moj dodatni program. Nadam "
+"se da Vam se dopada koliko i meni."
 
 #: ../cms-tree-page-view/functions.php:1695
 msgid "/Pär Thernström - plugin creator"
-msgstr "/Pär Thernström - Plugin-Autor"
+msgstr "/Pär Thernström - autor dodatnog programa"
 
 #: ../cms-tree-page-view/functions.php:1697
 msgid "I like this plugin<br>– how can I thank you?"
-msgstr "Mir gefällt dieses Plugin<br>Wie kann ich helfen?"
+msgstr "Dopada mi se ovaj plugin<br> - kako da Vam se zahvalim?"
 
 #: ../cms-tree-page-view/functions.php:1698
 msgid "There are serveral ways for you to show your appreciation:"
-msgstr ""
+msgstr "Postoji nekoliko načina da pokažete svoju zahvalnost:"
 
 #: ../cms-tree-page-view/functions.php:1700
 #, php-format
@@ -374,11 +371,13 @@ msgid ""
 "<a href=\"%1$s\">Give it a nice review</a> over at the WordPress Plugin "
 "Directory"
 msgstr ""
+"<a href=\"%1$s\"> Dajte pozitivan komentar </a> o ovome na WordPress Plugin "
+"Directory"
 
 #: ../cms-tree-page-view/functions.php:1701
 #, php-format
 msgid "<a href=\"%1$s\">Give a donation</a> – any amount will make me happy"
-msgstr ""
+msgstr "<a href=\"%1$s\">Dajte donaciju </a> – obradovaće me svaki iznos"
 
 #: ../cms-tree-page-view/functions.php:1702
 #, php-format
@@ -386,19 +385,22 @@ msgid ""
 "<a href=\"%1$s\">Post a nice tweet</a> or make a nice blog post about the "
 "plugin"
 msgstr ""
+"<a href=\"%1$s\">Pošaljite pozitivan tvit </a> ili izradite lepu blog poruku "
+"o dodatnom programu"
 
 #: ../cms-tree-page-view/functions.php:1705
 msgid "Support"
-msgstr "Hilfe/Support"
+msgstr "Podrška"
 
 #: ../cms-tree-page-view/functions.php:1706
 #, php-format
 msgid "Plese see the <a href=\"%1$s\">support forum</a> for help."
 msgstr ""
+"Molim vas da pogledate <a href=\"%1$s\"> forum za podršku </a> za pomoć."
 
 #: ../cms-tree-page-view/functions.php:1710
 msgid "Hide until next upgrade"
-msgstr "Bis zum nächsten Update verstecken"
+msgstr "Sakrijte do sledećeg apgrejdovanja"
 
 #~ msgid "Click to edit. Drag to move."
 #~ msgstr "Zum Editieren klicken. Zum Bewegen ziehen."
